static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap');

h1, h2, h3, h4, h5, h6{
    font-family: 'Playfair Display';
}

p{
    font-family: 'Open Sans';
}

/* General styles */
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    max-width: 100vw;
    padding: 0;
    margin: 0;
    overflow: auto;
  }

main {
    flex: 1 0 auto;
}

a{
    text-decoration: none;
    color: black;
}

.bold{
    font-weight: bold;
}

/* button styles */ 
.green-button{
 background-color: #00ffcb;
 color: #000;
 font-family: 'Open Sans';
 margin-right: 5px;
}


/* Flash messaging styles */
.flashes{
    border-radius: 15px;
}

.alert-error{
    color: red;
    
}

.alert-success{
    color: green;
    
}


/* Navbar */
.header-title{
    margin-left: 20px;
    margin-top: 30px;
}
nav{
    height: 20vh;
}
.gradient-colours{
    background-image: linear-gradient(213deg, rgba(2,0,36,1) 0%, rgba(63,172,255,1) 35%, rgba(0,255,203,1) 100%);
}

/* Footer */
i.fab.fa-facebook-f, i.fab.fa-twitter, i.fab.fa-linkedin-in{
    color: white;
    font-size: 20px;
}
.gradient-colours-2{

    background-image: linear-gradient(48deg, rgba(2,0,36,1) 0%, rgba(63,172,255,1) 35%, rgba(0,255,203,1) 100%);  
}

/* Index Page */
img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.success-div{
    height: 200px;    
}

.offer-div{
    margin-top: 20px;
}

.home-features-margin{
    margin-top: 30px;
}

.home-features-margin div{
    margin-top: 10px;
    margin-bottom: 10px;
}

i.fas.fa-file-alt, i.fas.fa-book-open, i.far.fa-thumbs-up, i.fas.fa-users, i.fas.fa-address-card, i.fas.fa-bookmark{
    color: #3facff;
    font-size: 30px;
}



/* Home Page */

.logo-size{ 
    object-fit: contain;
    overflow: hidden;
}

.media-container{
   min-height: 100%;
}

.sub-header-text{
    font-size: 18px;
}

i.fas.fa-search, i.far.fa-thumbs-down, i.far.fa-bookmark {
    color: #3facff;
    font-size: 30px;
    
}

i.fas.fa-chevron-circle-down, i.fas.fa-expand-alt {
    color: #000;
    font-size: 20px;
}

.content-admin-buttons{
    margin-top: 10px;
}


.content-image-container{
    height: 300px;
    margin-bottom: 10px;
}


.content-image-container img{
    height: 300px;
    object-fit: fill;
}

.content-container{
    border: 1px solid #e0e0e0 ;
}
.collapsible-header p{
    width: 100%;
}

.expand-actions-container{
   margin-bottom:20px;
   margin-top:10px;
  
}

.collapsible-header{
    border-bottom: none;
}

.content-icon-left, .content-icon-right{
    margin:10px;
}

ul.collapsible{
    -webkit-box-shadow: none;
    box-shadow:none;
    border:none;

}

/* Register Page */

i.far.fa-user, i.far.fa-user, i.far.fa-envelope, i.fas.fa-user-tag, i.fas.fa-lock{
    color: #3facff;
    font-size: 30px;
}

i.fas.fa-sign-in-alt{
    color: #1565c0;
    font-size: 30px;
}

/* Content Page forum */

textarea#body.materialize-textarea{
    height: 6rem;
}

.tab {
    tab-size: 4;
}


/* Profile Page */

.post_it{
    margin: 10px;
    text-align:center;
    
}

div.btn-small{
    border-radius: 50px;
}


.profile-container{
    height: 100%;
    margin-top: 40px;
    
    
}

.fav-articles-heading{
    margin-bottom: 40px;
}

div a.post-it-action{
    color: #311b92;
}

i.fas.fa-user-cog{
    color: #3facff;
    font-size: 30px;
    margin-right: 10px;
    margin-top: 10px;
}

 /* Admin User management page  */

.user-card-container{
    margin: 20px;
}

.user-buttons{
   
    margin-top:20px;
    margin-bottom:20px;
}






   /* Media Queries: */

@media only screen and (max-width: 321px) {
    /* For smaller mobiles: */

    /* Home Page */
    

}

@media only screen and (min-width: 601px) and (max-width: 1025px) {
    /* For tablets: */

   
}

@media only screen and (min-width: 1026px) {
    /* For desktop: */
    .home-margin{
        margin-top: 20px;
        margin-bottom: 20px;
    }
    
    .home-features-margin{
        margin-top: 20px;
        margin-bottom: 20px;
    }
    .home-features-margin div{
        margin-top: 20px;
        margin-bottom: 20px;
    }


    .success-div{
        margin-top: 20px;
    }
}


@media only screen and (min-width: 1900px) {
    /* For larger desktop: */

    .home-margin{
        margin-top: 20px;
        margin-bottom: 30px;
    }
    
    .home-features-margin{
        margin-top: 40px;
        margin-bottom: 20px;
    }
}

